# NeoXtractor

./: main.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
_temporary_tools_/: _run_mesh_viewer.py  _use_application_modules.py  mesh_loader_test.py  rhi_test.py  run_mesh_viewer.py  test_npk_directly.py  text_render.py  text_renderer_test.py
core/mesh_converter/formats/: ascii.py  gltf.py  iqe.py  obj.py  pmx.py  smd.py
core/mesh_loader/: parsers.py
data/shaders/: color.vert.qsb  point_d3d.vert.qsb  text.frag.qsb  text.vert.qsb
gui/: __init__.py  text_renderer.py
gui/renderers/: mesh_renderer.py  point_renderer.py  text_renderer.py
gui/utils/: rendering.py  viewer.py
gui/widgets/: code_editor.py  npk_file_list.py  preview_widget.py  texture_viewer.py
gui/widgets/hex_viewer/: __init__.py  hex_area.py  hex_viewer.py
gui/widgets/mesh_viewer/: __init__.py  camera.py  mesh_data.py  render_widget.py  tab_window_ui.py  viewer_widget.py
gui/widgets/tab_window_ui/: mesh_viewer.py  texture_viewer.py
gui/windows/: main_window.py  settings_window.py  viewer_tab_window.py
gui/windows/config_manager/: __init__.py  edit_config_dialog.py  new_config_dialog.py
shader/: README.txt
shaders/: point_d3d.vert  text.frag  text.vert
tools/: build_shaders.py
utils/: image_converters.py
